# gmshparsercpp

./: .editorconfig  .gitignore  .licenserc.json  CITATION.cff  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: build.yml  codeql-analysis.yml  qa.yml  release.yml
cmake/: CodeCoverage.cmake  gmshparsercpp-config.cmake  gmshparsercpp-config.cmake.in  gmshparsercppConfig.cmake
docs/: CMakeLists.txt  Doxyfile.in  conf.py.in  index.rst
include/: gmshparsercpp.h  gmshparsercppMshFile.h
include/gmshparsercpp/: Enums.h  Exception.h  MshFile.h  MshLexer.h
src/: CMakeLists.txt  Exception.cpp  MshFile.cpp  MshLexer.cpp  gmshparsercppMshFile.cpp  msh.lex
test/: CMakeLists.txt  Edge1D_test.cpp  ExceptionTestMacros.h  MshFile_test.cpp  Prism3D_test.cpp  Quad2D_test.cpp  TestConfig.h.in  main.cpp
test/assets/: 1d.msh  header-only.msh  missing-end-section-marker.msh  prism-v2.asc.msh  prism-v2.bin.msh  prism-v4.asc.msh  prism-v4.bin.msh  quad-v2.asc.msh  quad-v2.bin.msh  quad-v4.bin.msh  quad.msh  rect-10x10.msh  unsupported-data-size-v2.msh  unsupported-data-size-v4.msh  unsupported-version.msh
